WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
304112
[threaded-animations] tests with animated motion path properties crash with "Threaded Time-based Animations" enabled
https://bugs.webkit.org/show_bug.cgi?id=304112
Summary
[threaded-animations] tests with animated motion path properties crash with "...
Antoine Quint
Reported
2025-12-13 06:29:06 PST
Several tests crash due to their use of Motion Path properties, for instance `webanimations/offset-anchor-animation-yields-compositing.html`.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-12-13 06:29:16 PST
<
rdar://problem/166444990
>
Antoine Quint
Comment 2
2025-12-13 06:34:39 PST
Pull request:
https://github.com/WebKit/WebKit/pull/55360
EWS
Comment 3
2025-12-13 08:52:29 PST
Committed
304425@main
(9bcc90d8eb91): <
https://commits.webkit.org/304425@main
> Reviewed commits have been landed. Closing PR #55360 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug